<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">XML Quiz</string>

    <string name="Q1">Q1: In Java, which of the following belong to the group of Object Data Types? (Multiple answers can be selected, if you like)</string>
    <string name="q1_A">A: TextView</string>
    <string name="q1_B">B: ImageView</string>
    <string name="q1_C">C: ButtonView</string>
    <string name="Q2">Q2: What is the name for the way compounded words are written in Java? (Only one answer can be selected)</string>
    <string name="incorrect">PascalCase</string>
    <string name="correct">camelCase</string>
    <string name="Q3">Q3 What is the meaning of the abreviation XML? Enter your answer in the textfield below.</string>
    <string name="inputText">Write here your answer</string>
    <string name="Q4">Q4: Which of the following names are valid views in XML? (Multiple answers can be selected, if you like)</string>
    <string name="q4_A">A: ImageView</string>
    <string name="q4_B">B: RootView</string>
    <string name="q4_C">C: Button</string>
    <string name="totalPoints">0</string>
    <string name="summaryText">Summary</string>
    <string name="Check_Answers">Check Answers</string>
    <string name="Submit_Answers">Submit Answers</string>
    <!-- Message to let the user know his score in the format of "You scored 4 out of 6" -->
    <string name="toast_message">You scored <xliff:g example="4"> %s</xliff:g> out of 6</string>


    <!--
        Whipped cream topping for the order summary. It will be shown in the format of
        "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
      -->
    <string name="collection_of_points">Point count: </string>
    <!--xliff:g id="" example="10"> </xliff:g> out of 6</string>-->


    <string name="answer_summary">Answers given:
        <xliff:g example="Summary" id=""> </xliff:g></string>

    <!--Checkboxes-->
    <string name="answer_summary_q1_1">You selected answer Q1_1:  <xliff:g example="true" id="hasAnswerQ1_1"> </xliff:g></string>
    <string name="answer_summary_q1_2">You selected answer Q1_2:  <xliff:g example="true" id="hasAnswerQ1_2"> </xliff:g></string>
    <string name="answer_summary_q1_3">You selected answer Q1_3:  <xliff:g example="true" id="hasAnswerQ1_3"> </xliff:g></string>

    <!--Radiobuttons-->
    <string name="correct_selection">You selected: <xliff:g example="true" id=""> </xliff:g> </string>

    <!--Textinput -->
    <string name="text_input">You wrote: <xliff:g example="Amy" id="ASTI"> </xliff:g></string>

    <!--Checkboxes-->
    <!--
    Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
    user's name. [CHAR LIMIT=20]
    -->
    <string name="answer_summary_q4_1">You selected answer Q4_1:  <xliff:g example="true" id="hasAnswerQ4_1"> </xliff:g></string>
    <string name="answer_summary_q4_2">You selected answer Q4_2:  <xliff:g example="true" id="hasAnswerQ4_2"> </xliff:g></string>
    <string name="answer_summary_q4_3">You selected answer Q4_3:  <xliff:g example="true" id="hasAnswerQ4_3"> </xliff:g></string>


</resources>
